--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1><em>Odin Recipes</em></h1>
     <ul>
         <li><a href="recipes/lasagna.html" target="_blank">Lasagna Recipe</a></li>
         <li><a href="recipes/grilled-cheese-sandwich.html" target="_blank">Grilled Cheese Sandwich Recipe</a></li>
